changed Insurance structure, working flyway