@@ -29,6 +29,7 @@
     <commons-lang>2.6</commons-lang>
     <springfox-swagger2>2.7.0</springfox-swagger2>
     <postgresql>42.2.5</postgresql>
+    <flyway>5.1.4</flyway>
   </properties>
 
   <build>
@@ -120,7 +121,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -132,6 +132,9 @@
             <exclude>GetIncomeCostsAndTaxesParametrizedTest.java</exclude>
             <exclude>ConnectionDatesDeleteTest.java</exclude>
           </excludes>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
     </plugins>
@@ -245,6 +248,11 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>5.1.4</version>
     </dependency>
   </dependencies>
 </project>
